// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/modal/demo/async.vue correctly 1`] = `
<div><button class="ant-btn ant-btn-primary" type="button">
    <!----><span>Open Modal with async logic</span>
  </button>
  <!---->
</div>
`;

exports[`renders ./components/modal/demo/basic.vue correctly 1`] = `
<div><button class="ant-btn ant-btn-primary" type="button">
    <!----><span>Open Modal</span>
  </button>
  <!---->
</div>
`;

exports[`renders ./components/modal/demo/button-props.vue correctly 1`] = `
<div><button class="ant-btn ant-btn-primary" type="button">
    <!----><span>Open Modal with customized button props</span>
  </button>
  <!---->
</div>
`;

exports[`renders ./components/modal/demo/confirm.vue correctly 1`] = `
<div class="ant-space ant-space-horizontal ant-space-align-center" style="flex-wrap: wrap; margin-bottom: -8px;">
  <div class="ant-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="ant-btn ant-btn-default" type="button">
      <!----><span>Confirm</span>
    </button></div>
  <!---->
  <div class="ant-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="ant-btn ant-btn-default" type="button">
      <!----><span>With promise</span>
    </button></div>
  <!---->
  <div class="ant-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="ant-btn ant-btn-dashed" type="button">
      <!----><span>Delete</span>
    </button></div>
  <!---->
  <div class="ant-space-item" style="padding-bottom: 8px;"><button class="ant-btn ant-btn-dashed" type="button">
      <!----><span>With extra props</span>
    </button></div>
  <!---->
</div>
`;

exports[`renders ./components/modal/demo/confirm-promise.vue correctly 1`] = `
<button class="ant-btn ant-btn-default" type="button">
  <!----><span>Confirm</span>
</button>
`;

exports[`renders ./components/modal/demo/confirm-router.vue correctly 1`] = `
<button class="ant-btn ant-btn-default" type="button">
  <!----><span>Confirm</span>
</button>
`;

exports[`renders ./components/modal/demo/footer.vue correctly 1`] = `
<div><button class="ant-btn ant-btn-primary" type="button">
    <!----><span>Open Modal with customized footer</span>
  </button>
  <!---->
</div>
`;

exports[`renders ./components/modal/demo/fullscreen.vue correctly 1`] = `
<div><button class="ant-btn ant-btn-primary" type="button">
    <!----><span>Open Modal</span>
  </button>
  <!---->
</div>
`;

exports[`renders ./components/modal/demo/hook-modal.vue correctly 1`] = `
<div class="ant-space ant-space-horizontal ant-space-align-center" style="flex-wrap: wrap; margin-bottom: -8px;">
  <div class="ant-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="ant-btn ant-btn-default" type="button">
      <!----><span>Confirm</span>
    </button></div>
  <!---->
  <div class="ant-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="ant-btn ant-btn-default" type="button">
      <!----><span>With promise</span>
    </button></div>
  <!---->
  <div class="ant-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="ant-btn ant-btn-dashed" type="button">
      <!----><span>Delete</span>
    </button></div>
  <!---->
  <div class="ant-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="ant-btn ant-btn-dashed" type="button">
      <!----><span>With extra props</span>
    </button></div>
  <!---->
  <div class="ant-space-item" style="padding-bottom: 8px;"></div>
  <!---->
</div>
`;

exports[`renders ./components/modal/demo/info.vue correctly 1`] = `
<div class="ant-space ant-space-horizontal ant-space-align-center" style="flex-wrap: wrap; margin-bottom: -8px;">
  <div class="ant-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="ant-btn ant-btn-default" type="button">
      <!----><span>Info</span>
    </button></div>
  <!---->
  <div class="ant-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="ant-btn ant-btn-default" type="button">
      <!----><span>Success</span>
    </button></div>
  <!---->
  <div class="ant-space-item" style="margin-right: 8px; padding-bottom: 8px;"><button class="ant-btn ant-btn-default" type="button">
      <!----><span>Error</span>
    </button></div>
  <!---->
  <div class="ant-space-item" style="padding-bottom: 8px;"><button class="ant-btn ant-btn-default" type="button">
      <!----><span>Warning</span>
    </button></div>
  <!---->
</div>
`;

exports[`renders ./components/modal/demo/locale.vue correctly 1`] = `
<div><button class="ant-btn ant-btn-primary" type="button">
    <!----><span>Modal</span>
  </button><button class="ant-btn ant-btn-default" type="button">
    <!----><span>Confirm</span>
  </button>
  <!---->
</div>
`;

exports[`renders ./components/modal/demo/manual.vue correctly 1`] = `
<button class="ant-btn ant-btn-default" type="button">
  <!----><span>Open modal to close in 5s</span>
</button>
`;

exports[`renders ./components/modal/demo/modal-render.vue correctly 1`] = `
<div><button class="ant-btn ant-btn-primary" type="button">
    <!----><span>Open Modal</span>
  </button>
  <!---->
</div>
`;

exports[`renders ./components/modal/demo/position.vue correctly 1`] = `
<div id="components-modal-demo-position"><button class="ant-btn ant-btn-primary" type="button">
    <!----><span>Display a modal dialog at 20px to Top</span>
  </button>
  <!----><br><br><button class="ant-btn ant-btn-primary" type="button">
    <!----><span>Vertically centered modal dialog</span>
  </button>
  <!---->
</div>
`;

exports[`renders ./components/modal/demo/width.vue correctly 1`] = `
<div><button class="ant-btn ant-btn-primary" type="button">
    <!----><span>Open Modal of 1000px width</span>
  </button>
  <!---->
</div>
`;
